# protonmail-client

./: .gitignore  Cargo.toml  Makefile  README.md  taplo.toml
.github/workflows/: ci.yaml  docs.yaml
src/: client.rs  config.rs  connection.rs  error.rs  flag.rs  folder.rs  lib.rs
tests/: cli_test.rs  integration_test.rs
tests/fake_imap/: io.rs  mailbox.rs  mod.rs  server.rs
tests/fake_imap/handlers/: capability.rs  expunge.rs  list.rs  login.rs  logout.rs  mod.rs  noop.rs  select.rs  uid_copy.rs  uid_fetch.rs  uid_search.rs  uid_store.rs
