[package]
name = "protonmail-client"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "IMAP client library for Proton Mail via Proton Bridge"
repository = "https://github.com/LeakIX/protonmail-client"

[dependencies]
email-parser = { git = "https://github.com/LeakIX/email-parser.git" }

# Async runtime
tokio = { version = "1.44", features = ["full"] }
futures = "0.3"
tokio-util = { version = "0.7", features = ["compat"] }

# IMAP + TLS
async-imap = "0.11"
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }

# Core
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1.40"
dotenvy = "0.15"

# Binary-only dependencies
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[[bin]]
name = "proton-cli"
path = "src/bin/proton-cli.rs"
